# aegis-env

./: .dockerignore  .gitignore  Dockerfile  README.md  baseline.py  baseline_results.json  inference.py  openenv.yaml  openenv_aegis_build_prompt.md  pyproject.toml  requirements.txt
aegis-scanner/: package.json
app/: env.py  main.py  models.py
app/graders/: base_grader.py  easy_grader.py  hard_grader.py  medium_grader.py
app/simulator/: cluster.py  log_generator.py  propagation.py  tools.py
app/tasks/: task_easy.py  task_hard.py  task_medium.py
data/: generate_fixtures.py
data/incidents/: amp_pzn_adversarial_04.json  dft_cascade_01.json  dft_cascade_02.json  dft_cascade_03.json  dft_cascade_04.json  jbk_single_01.json  jbk_single_02.json  jbk_single_06.json  jbk_single_07.json
server/: app.py  env.py
server/graders/: base_grader.py  easy_grader.py  hard_grader.py  medium_grader.py
server/simulator/: cluster.py  log_generator.py  propagation.py  tools.py
server/tasks/: task_easy.py  task_hard.py  task_medium.py
tests/: test_endpoints.py
