[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-env"
version = "1.0.0"
description = "AI Safety Incident Response OpenEnv"
authors = [
    { name="aegis-env team" }
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pytest",
    "openai",
    "requests",
]

[project.urls]
"Homepage" = "https://huggingface.co/spaces/TiddyDaddy/aegis-env"
