[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-env"
version = "1.0.0"
description = "AI Safety Incident Response OpenEnv"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name="aegis-env team" }
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pytest",
    "openai",
    "requests",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[project.urls]
"Homepage" = "https://huggingface.co/spaces/TiddyDaddy/aegis-env"

[tool.pytest.ini_options]
norecursedirs = ["aegis-scanner", ".venv", "venv", "env"]
